csrc/tests/codegen_probes/errors/err_arr_decl_multi.bas
' REJECT: array declaration allows one name at a time.
' zxbparser p_decl_arr:794 "Array declaration only allows one variable name at a time".
Dim a, b(10) As Byte
